# ArtPDE

./: Approximation.hpp  BoundaryCondition.hpp  CMakeLists.txt  CartesianVector.hpp  Connectivity.hpp  DOF.hpp  DOF_Mannger.hpp  DataArray.hpp  DataTable.hpp  DeformationMapping.hpp  DimensionUtility.hpp  Dof.hpp  DofUnit.hpp  Dof_New.hpp  Domain.hpp  Element.hpp  Geometry.hpp  GeometryData.hpp  GeometryDataFEM_IO.hpp  GeometryDataProcessor.hpp  GeometryLoader.hpp  GeometryMeshData.hpp  GeometryMeshFemData.hpp  IO_Uility.hpp  Integration.hpp  Operation.hpp  Point.hpp  ProjectUility.hpp  README.md  ShapeFunction.h  ShapeFunctionFactory.h  System.hpp  TestSpace.hpp  TrialSpace.hpp  Typelist.h  cell.hpp  coordinate_basis_utility.hpp  dimension_utility.hpp  edge.hpp  element_type_utility.h  (+14 more)
BasicData/: position_vector.hpp  position_vector_cartesian_detail.cpp
BasicData/src/: position_vector_cartesian_detail.cpp  position_vector_cartesian_impl.cpp  (+1 more)
Demo/: DemoArtProject.hpp  DemoBasisFunction.h  DemoFunctionSpace.hpp  DemoGeometry.hpp  DemoPositionVector.hpp
DemoCode/: DemoPositionVector.cpp
FunctionSpace/: ShapeFunction.h  ShapeFunctionFactory.h  basis_function_lagrange.h  lagrange2d_shape_function.h  lagrange3d_shape_function.h  serendipity2d_shape_function.h  singleton_holder.h
FunctionSpace_Refactor/: basis_function.hpp  function_space.hpp
GeometricData/: geometry.hpp  geometry_data_algorithm.hpp  geometry_data_reader.hpp  point.hpp
Geometry/: cell.hpp  edge.hpp  geometric_algorithm.hpp  geometric_data.hpp  geometric_reader.hpp  geometry.hpp  geometry_algorithm.hpp  geometry_data.hpp  geometry_data_algorithm.hpp  geometry_data_reader_artpde.hpp  geometry_mesh_type_data.hpp  geometry_reader.hpp  point.hpp  vertex.hpp
Geometry_New/: GeoTest2D.hpp  GeoTest3D.hpp  geo_data.hpp  geo_data_factory.hpp  geo_tree.hpp  point3.hpp
OldCode/: Approximation.hpp  Connectivity.hpp  DataArray.hpp  DimensionUtility.hpp  DofUnit.hpp  Element.hpp  FunctionSpace.h  Geometry.hpp  Integration.hpp  NumericalMethodUtility.hpp  Point.hpp  ShapeFunction.hpp  Solver.hpp  position_vector_cartesian_detail.cpp
Project/: art_project.hpp  project.hpp
Utility/: dimension_utility.hpp  element_type_utility.h  project_uility.hpp  shape_function_utility.h
(+20 files in other folders)
